# hr-service

./: .env.local  .env.prod  .env.test  .gitignore  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  project.sh
backend/: .pre-commit-config.yaml  pyproject.toml
backend/authentication/: admin.py  backends.py  models.py  renderers.py  serializers.py  urls.py  views.py
backend/authentication/migrations/: 0001_initial.py  0002_alter_user_id.py
backend/helpers/: admin_model.py  auto_slug_admin.py  generate_jwt_tokens.py  get_data_with_user.py  permissions.py  serializer_lifecycle.py  unwrap_formdata_string.py
backend/home/: asgi.py  exceptions.py  middleware.py  settings.py  urls.py  wsgi.py
backend/notification/: consumer.py  routing.py
backend/projects/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/projects/migrations/: 0001_initial.py  0002_initial.py  0002_tag_project_source_link_project_total_votes_and_more.py  0003_alter_project_experience.py  0003_project_image.py  0004_alter_project_image.py  0005_alter_project_image.py  0006_alter_project_slug_alter_tag_slug.py  0007_alter_project_slug_alter_project_title_and_more.py  0008_alter_project_slug_alter_tag_slug.py  (+11 more)
backend/responses/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/reviews/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/users/: admin.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
(+286 files in other folders)
