[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["webRofl"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "3.5.2"
"backports.zoneinfo" = "0.2.1"
Django = "4.0.6"
Pillow = "9.2.0"
sqlparse = "0.4.2"
tzdata = "2022.1"
psycopg2 = "*"
gunicorn = "*"
djangorestframework = "*"

[tool.poetry.dev-dependencies]
pre-commit = "*"
autoflake = "*"
black = "*"
pyupgrade = "*"
reorder-python-imports = "*"
yesqa = "*"
flake8 = "*"
flake8-annotations = "*"
flake8-annotations-coverage = "*"
flake8-bandit = "*"
flake8-broken-line = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-commas = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-eradicate = "*"
flake8-executable = "*"
flake8-fixme = "*"
flake8-future-import = "*"
flake8-pyi = "*"
flake8-mutable = "*"
flake8-string-format = "*"
flake8-todo = "*"
flake8-unused-arguments = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
